Add method for optionally returning the first element of a given type
IStructuredSelection#getFirstElement is widely used but because
selections are not generic returns a plain Object resulting in different
boilerplate patterns across the code including optimistic casting,
instance of and similar. In the case for an empty selection null is
returned adding some risk for NPE if not used appropriate and even
though there is an isEmpty() method Optionals usually offer a much more
convenient way to handle the absence of a value.

This adds a new method to access the first element with an Optional
describing the result and specify a desired type of element fixing both
the risk of null-pointer-access, remove the boilerplate for additional
cast/instanceof checks as well as allowing easy to understand chaining
and default value handling.

A default implementation ensures that any existing implementor inherits
at least a basic implementation and can possibly provide more effecient
ways if desired.